msg variable change

--- a/Python Basics/py_basics.ipynb
+++ b/Python Basics/py_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,31 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "msg = 'Ashok'\n",
-    "audience = 'Loves Pramee'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AshokLoves Pramee\n",
-      "Ashok Loves Pramee\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(msg+audience) \n",
-    "print(msg + ' ' + audience) "
+    "msg = 'Earth'\n",
+    "audience = 'Rotates around Sun'"
    ]
   },
   {
@@ -55,10 +36,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ashok     Loves Pramee\n",
-      "Loves Pramee Ashok\n",
-      "Ashok Loves Pramee\n",
-      "Ashok Loves Pramee\n"
+      "EarthRotates around Sun\n",
+      "Earth Rotates around Sun\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(msg+audience) \n",
+    "print(msg + ' ' + audience) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earth     Rotates around Sun\n",
+      "Rotates around Sun Earth\n",
+      "Earth Rotates around Sun\n",
+      "Earth Rotates around Sun\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
