--- a/Python Basics/py_basics.ipynb
+++ b/Python Basics/py_basics.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello!\n"
+      "Hello! AI\n"
      ]
     }
    ],
    "source": [
-    "print('Hello!')"
+    "# Print a string using print method\n",
+    "print('Hello! AI')"
    ]
   },
   {
